--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Задание Lite</title>
+    <title>Задание Pro</title>
+    <link rel="stylesheet" href="/static/css/beauty.css">
 </head>
 <body>
     <h1 align="center">Главная страница</h1>
     <p align="center">
-        сегодня:&nbsp{{ curdate }},&nbsp{{curweek}}.
+
+        <text  class="text2">сегодня:&nbsp{{ curdate }},&nbsp{{curweek}}.</text>
     </p>
     <hr>
 
-    <a href="\personal\">Персональные данные</a>
+    <a href="\personal\" >Персональные данные</a>
     <br>
 
     <a href="\parser\">Парсер</a>
+    <br>
+
+    <a href="\hh_main\">Вакансии</a>
     <br>
 
 </body>
